Fixed HTML layout error in CAD Detail
CAD Detail Layout was broken on firefox

--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -507,6 +507,10 @@ input.registration {
 	margin-right: 20px;
 }
 
+#cad-detail-table {
+	float: left;
+}
+
 #cad-detail-table tr.emphasis td {
 	background-color: gray;
 	font-weight: bold;
